# abset

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  DOCKER.md  FRONTEND.md  README.md  app.py  cli.py  cli_admin.py  conftest.py  docker-compose.yml  pyproject.toml  settings.yaml
.github/workflows/: ci.yml
abkit/: __init__.py  access.py  checks.py  config.py  dataset_categorical.py  demo_data.py  dev_helpers.py  experiment.py  experiment_store.py  idnorm.py  jobs.py  monitoring.py  pipeline.py  storage.py
abkit/analysis/: multiple_testing.py  results.py  tests.py  variance_reduction.py
abkit/auth/: guards.py  service.py  tokens.py
abkit/db/: __init__.py  engine.py  import_legacy.py  maintenance.py  models.py  repositories.py  store.py  wait.py
abkit/db_connections/: __init__.py  crypto.py  engines.py  service.py  sql_guard.py  sql_parsing.py  testing.py
abkit/design/: isolation.py  power.py  splitter.py  stratification.py
abkit/preprocessing/: outliers.py
abkit/validation/: simulation.py
abkit/viz/: help_texts.py  plots.py  report.py
backend/: chart_data.py  deps.py  errors.py  main.py
backend/jobs/: __init__.py  runner.py
backend/routers/: admin.py  (+8 more)
docker/: Dockerfile  README.md  entrypoint-backend.sh  entrypoint-legacy.sh  entrypoint.sh  nginx.conf.template  test_persistence.sh  verify_tab_isolation.py
docs/: OPERATIONS.md  PRESENTATION.md  USER_GUIDE.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vitest.config.ts
migrations/: env.py
scripts/: backup.sh  e2e.sh  update.sh
templates/: _strata_power_section.html.j2  design_report.html.j2  report.html.j2
tests/: conftest.py  test_analysis_results.py  test_analysis_tests.py  test_analysis_tests_advanced.py  test_app.py  test_app_auth.py  test_audit_log.py  test_auth.py  test_checks.py  test_checks_analysis.py  test_cli.py  test_cli_admin.py  test_cli_demo.py  test_cli_stage6.py  test_config.py  test_dataset_categorical.py  test_db_connections_core.py  test_db_maintenance.py  test_db_mode_e2e.py  test_db_repositories.py  test_db_wait.py  test_demo_data.py  test_dev_cleanup.py  test_dev_helpers.py  test_experiment_analyze.py  test_experiment_design.py  test_experiment_external_split.py  test_experiment_store.py  test_external_split_strata.py  test_help_texts.py  test_import_legacy.py  test_isolation.py  test_isolation_db.py  test_jobs_permission_matrix.py  test_monitoring.py  test_multiple_testing.py  test_no_cyrillic_in_ui.py  test_outliers.py  test_pipeline.py  test_power.py  (+13 more)
(+149 files in other folders)
