[project]
name = "abkit"
version = "0.1.0"
description = "Фреймворк для дизайна и анализа A/B тестов"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "questionary>=2.0",
    "streamlit>=1.35",
    "plotly>=5.20",
    "jinja2>=3.1",
    "pyarrow>=14.0",
    "filelock>=3.13",
    "joblib>=1.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
abkit = "cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["abkit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
