[project]
name = "abkit"
version = "2.0.0"
description = "Фреймворк для дизайна и анализа A/B тестов"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "questionary>=2.0",
    "plotly>=5.20",
    "jinja2>=3.1",
    "pyarrow>=14.0",
    "filelock>=3.13",
    "joblib>=1.3",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "argon2-cffi>=23.1",
    "bcrypt>=4.1",
    "pyjwt>=2.8",
    "structlog>=24.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "cryptography>=42.0",
    "sqlglot>=25.0",
    "Pillow>=10.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "testcontainers[postgres]>=4.0",
    "pyflakes>=3.4",
    "httpx>=0.27",
]
# Database Connections feature (CLAUDE.md): drivers for the non-Postgres
# engines. PostgreSQL connections reuse psycopg (core dependency, already
# used for abkit's own DB) — no extra needed for that engine alone.
db-connectors = [
    "clickhouse-connect>=0.7",
    # pymssql (FreeTDS), not pyodbc: no system ODBC driver / Microsoft EULA
    # to install in the image, ships prebuilt manylinux wheels.
    "pymssql>=2.3",
]

[project.scripts]
abkit = "cli:app"
abkit-admin = "cli_admin:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["abkit*"]

[tool.pytest.ini_options]
testpaths = ["tests", "backend/tests"]
